# DALLEmmyBot

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.sh  setup.sh
dallemmybot/: README.md  animal_book.py  animal_lists.py  community_list.py  dallemmybot.py  imgur.py  lemmy.py  lemmy_funct.py  lemmy_funct2.py  main.py  mastodon_funct.py  painting_constants.py  pixelfed.py  pixlfed.py  shot_type.py  storybook.py  wikipedia.py
