[tool.poetry]
name = "dallemmybot"
version = "0.1.0"
description = ""
authors = ["Brian <reallybrianhudson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
requests = "^2.31.0"
pillow = "^10.1.0"
openai = "^1.3.4"
griptape = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
