[tool.poetry]
name = "dallemmybot"
version = "0.1.0"
description = "An OpenAI powered bot for Lemmy"
authors = ["Brian <reallybrianhudson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
requests = "^2.31.0"
pillow = "^10.1.0"
openai = "^1.3.4"
griptape = "^0.20.0"
pyupload = "^0.1.4"
imgur-python = "^0.2.4"
mastodon-py = "^1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
